# conecta4

./: README.md  pyproject.toml
src/conecta4/: board.py  borrador.ipynb  conecta.py  game.py  list_utils.py  main.py  match.py  oracle.py  player.py  settings.py
src/conecta4/tests/: test_game.py  test_list_utils.py  test_match.py  test_oracle.py  test_player.py
